error.txt
  File "/home/runner/work/self-heal-CI-CD/self-heal-CI-CD/src/bug.py", line 47
    ```
    ^
SyntaxError: invalid syntax
